# OpenHashTab

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AlgorithmsDll.sln  CMakeLists.txt  InstallerLicense.rtf  OpenHashTab.sln  OpenHashTab.wixproj  Package.wxs  README.md  arm64x.cmake  build-mctrl.bat  build-xkcp.bat  build_algorithms.ps1  build_all.ps1  build_installers.bat  build_openhashtab.ps1  installer.iss  license.installer.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  winget.yml
Algorithms/: Algorithms.vcxproj  Algorithms.vcxproj.filters  AlgorithmsDll.vcxproj  AlgorithmsDll.vcxproj.filters  CMakeLists.txt  DllMain.c  FakeCrt.cpp  Hasher.cpp  Hasher.h  Hasher2.cpp  Hasher2.h  HasherLoader.cpp  blake2sp.h  blake3.h  blake3_dispatch.c  crc64.cpp  mbedtls_config.h  sha3.c  sha3.h  xxh_avx2.c  xxh_avx512.c  xxh_neon.c  xxh_scalar.c  xxh_sse2.c  xxhash.c
Algorithms/BLAKE3/: CMakeLists.txt  blake3_dispatch.c
Algorithms/QuickXorHash/: CMakeLists.txt
Algorithms/XKCP/: CMakeLists.txt  config.h
Algorithms/blake2sp/: CMakeLists.txt  blake2sp.h
Algorithms/crc32/: CMakeLists.txt
Algorithms/crc64/: CMakeLists.txt  crc64.h
Algorithms/mbedtls/: CMakeLists.txt  mbedtls_config.h
Algorithms/streebog/: CMakeLists.txt  gost3411-2012-config.h
Algorithms/xxHash/: CMakeLists.txt  xxhash.c
AlgorithmsDlls/: .gitignore  CMakeLists.txt
AlgorithmsLoader/: Algorithms.vcxproj  Algorithms.vcxproj.filters  Hasher.h  HasherLoader.cpp
Benchmark/: Benchmark.cpp  Benchmark.vcxproj  Benchmark.vcxproj.filters  CMakeLists.txt
LegacyAlgorithms/: .clang-format  CMakeLists.txt  Hasher.h  LegacyHasher.cpp
Localization/: CMakeLists.txt  Localization.vcxproj  Localization.vcxproj.filters  ar.json  bg.json  bn.json  chinese_simplified.json  cs-CZ.json  da-DK.json  da-dk.json  da.json  de-DE.json  de-de.json  en-US.json  en-us.json  english_us.json  eo.json  es-ES.json  es-es.json  et.json  fi-FI.json  fi.json  fr-FR.json  fr-fr.json  french.json  german.json  gl-ES.json  gl.json  hr-HR.json  hr.json  hu-HU.json  hu-hu.json  hungarian.json  id.json  it-IT.json  it-it.json  ja-JP.json  ja.json  ko-KR.json  ko.json  (+34 more)
Localization/isl/: ChineseSimplified.isl  ChineseTraditional.isl
OpenHashTab/: Benchmark.cpp  CMakeLists.txt  Coordinator.cpp  Coordinator.h  Exporter.cpp  Exporter.h  FileHashTask.cpp  FileHashTask.h  Hasher.cpp  Hasher.h  HasherRegistry.cpp  MainDialog.cpp  MainDialog.h  OpenHashTab.cpp  OpenHashTab.def  OpenHashTab.idl  OpenHashTab.rc  OpenHashTab.vcxproj  OpenHashTab.vcxproj.filters  OpenHashTabPropPage.cpp  OpenHashTabPropPage.h  OpenHashTabShlExt.cpp  OpenHashTabShlExt.h  OpenHashTabShlExt.rgs  PageDialog.cpp  PageDialog.h  PropPage.cpp  PropPage.h  Queues.cpp  Queues.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  Standalone.cpp  SumFileParser.cpp  SumFileParser.h  additional.manifest  base64.cpp  base64.h  (+28 more)
OpenHashTab/AlgorithmsDlls/: CMakeLists.txt
OpenHashTab/Benchmark/: Benchmark.cpp  CMakeLists.txt
OpenHashTab/LegacyAlgorithms/: Hasher.h
OpenHashTab/Localization/: CMakeLists.txt
OpenHashTab/OpenHashTab/: CMakeLists.txt  Coordinator.cpp  Coordinator.h  Exporter.h  FileHashTask.cpp  MainDialog.h  OpenHashTab.rc  Queues.cpp  Queues.h  Settings.cpp  SettingsDialog.cpp  SettingsDialog.h  Standalone.cpp  SumFileParser.cpp  SumFileParser.h  additional.manifest  base64.cpp  hash_colors.h  https.h  json.h  path.cpp  path.h  resource.h  utl.h  virustotal.cpp  virustotal.h  wnd.h
OpenHashTab/StandaloneStub/: StandaloneStub.rc
OpenHashTab/localization/: en-us.rc  hu-HU.rc  resource_localizable.h
OpenHashTabPS/: OpenHashTabPS.vcxproj  OpenHashTabPS.vcxproj.filters
Setup/: OpenHashTab.wixproj  Package.wxs
StandaloneStub/: CMakeLists.txt  StandaloneStub.cpp  StandaloneStub.rc  StandaloneStub.vcxproj  StandaloneStub.vcxproj.filters  resource.h
mbedtls_config/: mbedtls_config.h
